--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /vector-cloud/build/vic-cloud
 /chipper/source.sh
 /vector-cloud/build
+/jdocs/jdocs
+/token/token
 /chipper/chipper
 /certs
 /vector-cloud/packagesGotten
